--- a/skoton/pom.xml
+++ b/skoton/pom.xml
@@ -21,6 +21,16 @@
       <artifactId>json</artifactId>
       <version>20180130</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.17</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
